import React from 'react';
import Image from 'terra-image';
import ThemeContextProvider from 'terra-theme-context/lib/ThemeContextProvider';

import LargeDemographicsBannerDisplay from '../../src/_LargeDemographicsBannerDisplay';

it('renders large banner that contains all valid information', () => {
  const banner = enzyme.shallow(<LargeDemographicsBannerDisplay
    applicationContent={<span className="risk-score">5%</span>}
    age="25 Years"
    applicationRows={[{ Address: '1501 Walnut St. Apt #123', City: 'Kansas City MO' }, { ZIP: 64108 }]}
    dateOfBirth="May 9, 1993"
    gender="Male"
    identifiers={{ MRN: 12343, REA: '3JSDA' }}
    photo={<Image alt="My Cat" src="" />}
    personName="Johnathon Doe"
    preferredFirstName="John"
    dateOfBirthLabel="DOB"
    deceasedDateLabel="Deceased"
    gestationalAgeLabel="GA"
    postMenstrualAgeLabel="PMA"
  />);

  expect(banner.find('h2').exists()).toBe(true);
  expect(banner.find('dl').at(0).exists()).toBe(true);
  expect(banner.find('dl').at(1).exists()).toBe(true);
  expect(banner).toMatchSnapshot();
});

it('renders the provided person name header level', () => {
  const banner = enzyme.shallow(<LargeDemographicsBannerDisplay
    personName="Johnathon Doe"
    personNameHeadingLevel={3}
    preferredFirstName="John"
  />);

  expect(banner.find('h3').exists()).toBe(true);
  expect(banner).toMatchSnapshot();
});

it('correctly applies the theme context className', () => {
  const banner = enzyme.mount(
    <ThemeContextProvider theme={{ className: 'orion-fusion-theme' }}>
      <LargeDemographicsBannerDisplay />
    </ThemeContextProvider>,
  );
  expect(banner).toMatchSnapshot();
});

